--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slate-react",
+  "name": "slate-react-fork-smppt",
   "description": "Tools for building completely customizable richtext editors with React.",
-  "version": "0.72.1-patch.1",
+  "version": "0.0.2",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate.git",
   "main": "dist/index.js",
@@ -65,5 +65,8 @@
     "text",
     "wysiwyg",
     "wysiwym"
-  ]
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
